--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
+      - name: Install Dependencies
+        run: npm ci
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         continue-on-error: true
