--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,10 @@ jobs:
         with:
           browser: chrome
         continue-on-error: true
-      - name: Build the Allure Report
-        run: |
-          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          allure serve allure-results
-      - name: Output folders
-        run: ls
+      - name: Generate Allure Report
+        run: npx allure generate allure-results --clean -o allure-report
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: allure-report
