--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
           browser: chrome
         continue-on-error: true
       - name: Generate Allure Report
-        run: npx allure generate allure-results --clean -o allure-report
+        run: |
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+          allure generate allure-results --clean -o allure-report
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4.6.2
         with:
