--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Generate Allure Report
         run: |
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          allure generate allure-results --clean -o allure-report
+          allure generate allure-results --clean -o allure-report --single-file
+      - name: Output files
+        run: ls
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4.6.2
         with:
