--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
         uses: actions/upload-artifact@v4.6.2
         with:
           name: allure-report
-          path: allure-report
+          path: allure-report/index.html
